[project]
name = "the-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "dask[complete]>=2025.9.1",
    "datasets>=3.6.0",
    "deltalake>=1.2.1",
    "dotenv>=0.9.9",
    "en-core-web-sm",
    "faiss-cpu>=1.11.0",
    "gliner>=0.2.21",
    "graphviz>=0.21",
    "instructor>=1.9.0",
    "ipykernel>=6.29.5",
    "iteration-utilities>=0.13.0",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.18",
    "lxml>=6.0.2",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.55.0",
    "publicsuffix2>=2.20191221",
    "pyalex>=0.18",
    "pycountry>=24.6.1",
    "pympler>=1.1",
    "qdrant-client>=1.15.1",
    "rake-nltk>=1.0.6",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "txtai>=8.5.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
